--- a/ProjRemo/src/pages/PerfilUser/stylePerfilUser.css
+++ b/ProjRemo/src/pages/PerfilUser/stylePerfilUser.css
@@ -3,18 +3,47 @@
     flex-direction: column;
 
     & .PostagemContainer {
-        overflow-x: auto;
-        white-space: nowrap;
-        display: flex;
+      width: 100%; /* Ajuste isso para a largura desejada */
+      overflow: hidden;
+      white-space: nowrap;
+      display: flex;
+      transition: transform 0.3s ease-in-out;
+      justify-content: space-around;
+      background-color: #e9e9e9;
+      padding: 0.5rem;
       }
       
+
+      & .ControlesCarrossel{
+        display: flex;
+        justify-content: center;
+        gap: 4px;
+        margin-top: 0.4rem;
+        
+        
+        & button{
+          background-color: #00A310;
+          border: none;
+          box-shadow: -1px 0.5px 0.5rem rgb(131, 131, 131);
+          color: white;
+          transition: background-color 0.3s;
+
+        }
+        & button:hover{
+          background-color:#034309;
+          
+
+        }
+      }
+
+
       & .Postagem {
         padding: 0.8rem;
         background-color: rgb(205, 205, 205);
         border-radius: 5px;
         text-align: center;
         width: 7rem;
-        height: 8rem;
+        height: 6rem;
         justify-content: space-between;
         gap: 0.5rem;
         margin-right: 1rem; /* Espaçamento entre as postagens */
@@ -29,12 +58,21 @@
         }
       
         & p:last-of-type {
-          color: #9b9999;
+          display: flex;
+          flex-direction: row-reverse;
           margin: 0;
           align-self: flex-end;
           font-size: small;
+          color: #333;
         }
-
+        
+        & span{
+          display: flex;
+          color: #9b9999;
+          flex-direction: row-reverse;
+          font-size: smaller;
+          align-self: flex-end;
+        }
 
     
       }
@@ -80,9 +118,10 @@
            color: white;
            border: none;
            border-radius: 0px;
-       } 
-
-       & button:hover{
+           
+          } 
+          
+          & button:hover{
         background-color:#034309;
        }
     }
@@ -134,6 +173,7 @@
     align-items: center;
     
     
+    
     & .GoPrateleira {
         box-shadow: -1px 0.5px 0.5rem rgb(131, 131, 131);
        display: flex;
@@ -146,6 +186,8 @@
         height: 100%; 
         padding: 1rem 4rem;
         border-radius: 10px;
+        transition: background-color 0.5s;
+
     } 
     
     & .GoPrateleira:hover {
@@ -213,3 +255,22 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   }
   
+  .comunidade{
+    & a {
+      display: flex;
+      margin-top: 1px;
+      & button{
+        padding: 0.4rem;
+        background-color: #00A310;
+        border: none;
+        color: white;
+        border-radius: 10px;
+      }
+      
+      & button:hover{
+        background-color:#034309;
+
+
+      }
+    }
+  }
