--- a/ProjRemo/src/pages/PerfilUser/stylePerfilUser.css
+++ b/ProjRemo/src/pages/PerfilUser/stylePerfilUser.css
@@ -45,34 +45,37 @@
 
 
       & .Postagem {
-        padding: 0.8rem;
+        padding: 0.4rem;
         background-color: rgb(205, 205, 205);
         border-radius: 5px;
         text-align: center;
-        width: 7rem;
+        width: 10rem;
         height: 6rem;
         justify-content: space-between;
-        gap: 0.5rem;
+        gap: 0.1rem;
         margin-right: 1rem; /* Espaçamento entre as postagens */
         display: inline-block; /* Para garantir que as postagens fiquem em linha */
       
         & p:first-of-type {
           margin-top: 0;
+          margin-bottom: 1rem;
           align-self: start;
-          font-weight: bold;
           flex-wrap: wrap;
           white-space: normal;
+          font-size: smaller;
+          color: rgb(55, 55, 55);
         }
       
-        & p:last-of-type {
+        & p:last-of-type {margin-bottom: 10rem;
           display: flex;
           flex-direction: row-reverse;
           margin: 0;
+          margin-top:0.5rem;
           align-self: flex-end;
           font-size: small;
           color: #333;
         }
-        
+
         & span{
           display: flex;
           color: #9b9999;
@@ -81,6 +84,11 @@
           align-self: flex-end;
         }
 
+        & button{
+          margin-top: 0.8rem;
+        }
+
+      
     
       }
 
@@ -90,6 +98,7 @@
         justify-content: space-around;
         margin: 0 1rem;
         flex-wrap: wrap;
+
 
 
 
@@ -128,6 +137,16 @@
            transition: background-color 0.2s;
            ;
           } 
+
+          & button.like {
+            background-color: #00A310;
+            color: white;
+          }
+      
+          & button.dislike {
+            background-color: #FF0000;
+            color: white;
+          }
           
           & button:hover{
         background-color:#034309;
@@ -176,47 +195,48 @@
 }
 
 .divPrateleira {
-    display: flex;
-    flex-direction: row;
-    align-items:flex-start;
-    justify-content: center;
-    gap: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 2rem;
+  padding: 0;
+  margin-top: 0;
+
+  & .Prateleira {
+    height: 1rem;
+    transition: height 0.5s;
+    padding: 0;
+    margin-top: 0;
+
+    & .PrateleiraInfoContent {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      background-color: hsl(126, 92%, 20%);
+      padding: 0;
+      margin-top: 0;
+      height: 0;
+       transition: height 0.3s; 
+      & p {
+        color: rgb(255, 255, 255);
+        margin: 0; 
+        margin-bottom: 0.5rem; 
+      }
   
-      & .Prateleira{
-        height: 1rem;
-        transition: height 0.5s;
+      & p:not(:last-child) {
+        margin-bottom: 0;
+      }
+    }
 
-        & .PrateleiraInfoContent {
-          align-items: start;
-          gap: 0.2rem;
-          display: flex;
-          flex-direction: column;
-          background-color:hsl(126, 92%, 20%);
-          
-          padding: 0; 
-          margin-top: 0; 
-          
-          
-            & p{
-              margin: 0;
-              color: rgb(255, 255, 255);
-            }
-          }
+   
+  }
 
-          & .teste :hover{
-            height: 8rem;
+   & .Prateleira:hover .PrateleiraInfoContent {
+    height: 32rem; 
+  }
+}
 
-          }
-
-          
-    
-        }
-    
-        & .PrateleiraInfoContent :hover{
-          display: flex;
-
-        }
-        
       
 
       & .Prateleira:hover{
@@ -230,28 +250,33 @@
     
     & .GoOutraPag {
         box-shadow: -1px 0.5px 0.5rem rgb(131, 131, 131);
-       display: flex;
-       justify-content: center;
-       align-items: center;
+        display: flex;
+        justify-content: center;
         width: 10rem;
         text-decoration: none;
         color: white;
         background-color: #00A310;
         margin-top: 1rem;
         height: 2rem; 
-        
+
         border-radius:10px  10px    0  0px ;
         transition: background-color 0.3s;
 
-    } 
+  
+        & p{
+          display: flex;
+          justify-self: start;
+          align-self:unset;
+        }
     
+      }
+
+        
     & .GoOutraPag:hover {
         background-color: #034309;
     }
 
-  } 
-
-    
+     
 
 .MostrarAdd{
     display: flex;
@@ -293,9 +318,11 @@
     position: relative;
     transition: transform 0.2s ease-in-out;
     margin-right: 2.5rem;
+    text-decoration: none;
   }
   
   & .WikiItem h3 {
+
     font-size: 1.5rem;
     margin: 0;
     color: #333;
