--- a/ProjRemo/src/pages/PagInicial/stylePagInicial.css
+++ b/ProjRemo/src/pages/PagInicial/stylePagInicial.css
@@ -1,33 +1,3 @@
-.loading {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 14px;
-}
-
-.carousel-container {
-    position: relative;
-    height: 100%;
-}
-
-.slick-slider {
-    height: 100%;
-}
-
-.custom-arrow {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 24px;
-    cursor: pointer;
-    color: aliceblue;
-    background-color: rgba(0, 0, 0, 0.5);
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
 .custom-arrow:hover {
     background-color: rgba(0, 0, 0, 0.8);
 }
@@ -43,15 +13,15 @@
 .feed-popular-films {
     display: flex;
     flex-wrap: wrap;
-    max-width: 700px;
-    margin: 6px auto;
+    max-width: 80rem;
+    margin: auto;
     overflow: hidden;
     padding-top: .8rem;
 }
 
 .feed-header {
     display: flex;
-    background: url("../../img/salaVaziaVerde.jpg");
+    background-color: rgba(13, 112, 13, 0.596);
     height: 100%;
 }
 
@@ -59,13 +29,11 @@
     display: flex;
     flex-wrap: wrap;
     max-width: 900px;
-    margin: 6px auto;
-    border-radius: 18px;
+    margin: auto;
     overflow: hidden;
     padding-top: .8rem;
     /* background: url("https://static.wikia.nocookie.net/1e17bced-251e-4c43-b3ac-ed39ee07cb94"),rgba(6, 110, 6, 0.7); */
     background: linear-gradient(to right, rgb(10, 119, 19), rgba(255, 0, 0, 0));
-    box-shadow:  3px 3px 4px rgba(10, 10, 10, 0.7);
 }
 
 .list-feed__item-container {
@@ -80,12 +48,11 @@
     height: 100%;
 }
 
-/* .list-feed__image-wrapper {
+.list-feed__image-wrapper {
     position: relative;
     overflow: hidden;
-    border-radius: 8px;
     max-height: 200px;
-} */
+}
 
 .list-feed__image-container {
     max-height: 200px; 
@@ -117,8 +84,9 @@
     margin-right: 2rem;
     margin-bottom: -1rem;
     overflow: hidden;
-    max-width: 50%%;
+    max-width: 50%;
 }
+
 
 .alice-carousel__stage-item img {
     width: 100%;
@@ -136,6 +104,7 @@
 
 .alice-carousel__wrapper {
     display: flex;
+
 }
 
 .prev,
